# itsme

./: build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/itsme/amkush/: AppState.kt  CameraState.kt  DecoderLauncher.kt  MainHook.kt
app/src/main/java/com/itsme/amkush/decoder/: FfmpegStreamer.kt  FrameUtils.kt  LibVlcStreamer.kt  VideoDecoder.kt
app/src/main/java/com/itsme/amkush/hooks/: AntiXposedHooks.kt  Camera1Hooks.kt  Camera2Hooks.kt  CameraXHooks.kt  ClonerBypassHooks.kt  DenyListHooks.kt  DeviceSpoofHooks.kt  EmulatorBypassHooks.kt  ExifSpoofHooks.kt  IntentCaptureHooks.kt  RootBypassHooks.kt  SELinuxBypassHooks.kt
app/src/main/java/com/itsme/amkush/ipc/: FaceGateIpcProvider.kt  RemoteConfig.kt
app/src/main/java/com/itsme/amkush/model/: HookState.kt
app/src/main/java/com/itsme/amkush/network/: ApiClient.kt
app/src/main/java/com/itsme/amkush/services/: InjectionService.kt
app/src/main/java/com/itsme/amkush/ui/: HomeScreen.kt  HomeViewModel.kt  PaymentScreen.kt  SplashScreenActivity.kt  StreamPreviewDialog.kt  TabsScreen.kt
app/src/main/java/com/itsme/amkush/ui/adapter/: ViewPagerAdapter.kt
app/src/main/java/com/itsme/amkush/ui/fragments/: DenyListFragment.kt  DeviceSpoofFragment.kt  HomeFragment.kt  MediaFragment.kt  StatsFragment.kt  StreamSetupFragment.kt
app/src/main/java/com/itsme/amkush/utils/: SharedPrefs.kt
app/src/main/res/drawable/: ic_checkmark_green.xml
app/src/main/res/layout/: activity_home.xml  activity_payment.xml  activity_splash.xml  activity_tabs.xml  dialog_stream_preview.xml  fragment_deny_list.xml  fragment_device_spoof.xml  fragment_home.xml  fragment_media.xml  fragment_stats.xml  fragment_stream_setup.xml  item_app.xml  item_deny_app.xml  item_hook_status.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml
itsme/app/: build.gradle.kts
itsme/app/src/main/: AndroidManifest.xml
itsme/app/src/main/aidl/com/itsme/amkush/ipc/: ISurfaceInjector.aidl
itsme/app/src/main/cpp/: CMakeLists.txt  gst_pipeline.cpp
itsme/app/src/main/java/com/itsme/amkush/: DecoderLauncher.kt  MainHook.kt
itsme/app/src/main/java/com/itsme/amkush/decoder/: FfmpegStreamer.kt  OutputImageFormat.kt
itsme/app/src/main/java/com/itsme/amkush/gstreamer/: GStreamerPipeline.kt  SurfaceRouter.kt
itsme/app/src/main/java/com/itsme/amkush/hooks/: Camera1Hooks.kt  Camera2Hooks.kt  CameraXHooks.kt  ConfigUpdateReceiver.kt  GStreamerSurfaceRouter.kt
itsme/app/src/main/java/com/itsme/amkush/services/: InjectionService.kt
